--- a/indexywexy.html
+++ b/indexywexy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tic tac nut🥜</title>
+    <!-- Logan and Ethan -->
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
